<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_heat_status"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never"
        android:title="@string/option1" />

    <item
        android:id="@+id/menu_purchase"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never"
        android:title="@string/option2" />

    <item
        android:id="@+id/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never"
        android:title="@string/option3" />

    <item
        android:id="@+id/menu_Logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never"
        android:title="@string/option5" />



</menu>
